== 0.3.2

* Fixed ActionController parameter escaping behavior (Thiago Arrais, László
  Bácsi, Brett Gibson, et al)
* Fixed signature calculation when both options and a block were provided to
  OAuth::Signature::Base#initialize. (Seth)
* Added help to the 'oauth' CLI. (Seth)
* Fixed a problem when attempting to normalize MockRequest URIs. (Seth)

== 0.3.1 2009-1-26

* Fixed a problem with relative and absolute token request paths. (Michael
  Wood)

== 0.3.0 2009-1-25

* Support ActionController::Request from Edge Rails (László Bácsi)
* Correctly handle multi-valued parameters (Seth)
* Added #normalized_parameters to OAuth::RequestProxy::Base (Pelle)
* OAuth::Signature.sign and friends now yield the RequestProxy instead of the
  token when the passed block's arity is 1. (Seth)
* Token requests are made to the configured URL rather than generating a
  potentially incorrect one.  (Kellan Elliott-McCrea)
* Command-line app for generating signatures. (Seth)
* Improved test-cases and compatibility for encoding issues. (Pelle)

== 0.2.7 2008-9-10 The lets fix the last release release

* Fixed plain text signatures (Andrew Arrow)
* Fixed RSA requests using OAuthTokens. (Philip Lipu Tsai)

== 0.2.6 2008-9-9 The lets RSA release

* Improved support for Ruby 1.8.7 (Bill Kocik)
* Fixed RSA verification to support RSA providers
  now using Ruby and RSA
* Improved RSA testing
* Omit token when signing with RSA
* Added support for 'private_key_file' option for RSA signatures (Chris Mear)
* Fixed several edge cases where params were being incorrectly signed (Scott
  Hill)
* Fixed RSA signing (choonkeat)

== 0.2.2 2008-2-22 Lets actually support SSL release

* Use HTTPS when required.

== 0.2 2008-1-19 All together now release

This is a big release, where we have merged the efforts of various parties into one common library. This means there are definitely some API changes you should be aware of. They should be minimal but please have a look at the unit tests.

== 0.1.2 2007-12-1